fix: modal contrast items on theme, scroll
Work with modal contrast items on theme change to improve accesibility.
Fix a problem with scrolling.

--- a/src/scss/components/molecules/_form.scss
+++ b/src/scss/components/molecules/_form.scss
@@ -22,6 +22,7 @@
   &__edit-modal {
     background-color: var(--color-element-background);
     padding-right: var(--large-fs);
+    border: 1px solid var(--color-border);
   }
 
   &__content {
